--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "parcel src/demo.html --global NumberToAlphabet",
     "build": "parcel build src/number-to-alphabet.ts --no-minify --global NumberToAlphabet && npm run types",
-    "prettier": "prettier --write 'src/**/*.{ts,html}'",
+    "lint": "prettier --check .",
+    "prettier": "prettier --write .",
     "types": "tsc --emitDeclarationOnly"
   },
   "hooks": {
@@ -32,7 +33,7 @@
   "devDependencies": {
     "husky": "^4.2.3",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^1.18.2",
+    "prettier": "^2.1.1",
     "typescript": "^3.5.3"
   }
 }
